--- a/pages/media.html
+++ b/pages/media.html
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Beranda</a>
+                        <a class="nav-link" href="./index.html">Beranda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./media.html">Media</a>
+                        <a class="nav-link active" aria-current="page" href="./media.html">Media</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./kontak.html">Kontak</a>
